phase2_Dev/src/objects/Transaction_Document__c.object
<CustomObject>
    <description>A junction between the Document and a transaction.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Role</label>
        <referenceTo>Contact_Role__c</referenceTo>
        <relationshipLabel>Transaction Documents</relationshipLabel>
        <relationshipName>Transaction_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Attached__c</fullName>
        <label>Date Attached</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Attachment_Status__c</fullName>
        <formula>TEXT(Document__r.Attachment_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Attachment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Level_Provider_Notes__c</fullName>
        <formula>Document__r.Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Level Provider Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Level__c</fullName>
        <formula>If(Document__r.Provider__r.Record_Type_Name__c == &apos;Umbrella&apos;, &apos;Umbrella&apos; , &apos;Provider&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Type</label>
        <referenceTo>Document_Type__c</referenceTo>
        <relationshipLabel>Transaction Documents</relationshipLabel>
        <relationshipName>Transaction_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document</label>
        <referenceTo>Document__c</referenceTo>
        <relationshipLabel>Transaction Documents (Document)</relationshipLabel>
        <relationshipName>Transaction_Documents1_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Status_Date__c</fullName>
        <label>Last Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Licensing_Transaction__c</fullName>
        <label>Licensing Transaction</label>
        <referenceTo>Licensing_Transaction__c</referenceTo>
        <relationshipLabel>Transaction Documents</relationshipLabel>
        <relationshipName>Transaction_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Optional</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Note_For_Revision__c</fullName>
        <label>Note For Revision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <formula>Document__r.Provider__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3_File__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>S3 File</label>
        <referenceTo>S3_File__c</referenceTo>
        <relationshipLabel>Transaction Documents</relationshipLabel>
        <relationshipName>Transaction_Documents_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>To Upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Submit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted - EEC to Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned for Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Attachment</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Notes__c</fullName>
        <label>Transaction Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variance_on_Regulation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Variance on Regulation</label>
        <referenceTo>Variance_on_Regulation__c</referenceTo>
        <relationshipLabel>Transaction Documents</relationshipLabel>
        <relationshipName>Transaction_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transaction Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TD- {0000000}</displayFormat>
        <label>Transaction Document ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Doc_Type_required_on_mode_selection</fullName>
        <active>true</active>
        <description>If the mode is Required or Optional then a document type is mandatory.</description>
        <errorConditionFormula>AND( Document_Type__c == NULL, OR(  ISPICKVAL(Mode__c , &apos;Required&apos;), ISPICKVAL(Mode__c , &apos;Optional&apos;) ))</errorConditionFormula>
        <errorDisplayField>Document_Type__c</errorDisplayField>
        <errorMessage>Document Type is required if mode is set to &apos;Required&apos; or &apos;Optional&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Note_Required_If_Rejected</fullName>
        <active>true</active>
        <description>&quot;Status&quot; can not be changed to &quot;Rejected&quot; if &quot;Note for Revision&quot; is empty</description>
        <errorConditionFormula>AND(
  ISPICKVAL( Status__c , &apos;Rejected&apos;),
  Note_For_Revision__c == NULL
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>&quot;Status&quot; can not be changed to &quot;Rejected&quot; if &quot;Note for Revision&quot; is empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Note_required_if_returned_for_revision</fullName>
        <active>true</active>
        <description>A note is required if the status of the transaction document is set to &quot;Returned for Revision&quot;.</description>
        <errorConditionFormula>AND(
  ISPICKVAL( Status__c , &apos;Returned for Revision&apos;),
  Note_For_Revision__c == NULL
)</errorConditionFormula>
        <errorDisplayField>Note_For_Revision__c</errorDisplayField>
        <errorMessage>A note is required if the Transaction Document&apos;s Status is &quot;Returned for Revision&quot;.</errorMessage>
    </validationRules>
</CustomObject>